# docker-selenium

./: Dockerfile  Dockerfile_pytest  Makefile  docker-compose-dockerfile.yml  docker-compose-v2.yml  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: dockerfile.yml  parallel-tests.yml  python-linter.yml
1/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: categories-trend.json  retry-trend.json
1/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
10/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  duration-trend.json  history.json
10/widgets/: executors.json  history-trend.json  retry-trend.json  status-chart.json  summary.json
11/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: duration-trend.json  history.json  retry-trend.json
11/widgets/: duration.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
12/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: history.json
12/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
13/data/: behaviors.json  categories.json  packages.json  (+3 more)
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: conftest.py
(+1018 files in other folders)
