[metadata]
name = PracticeTests
description = Practice Test Framework
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Source = https://github.com/rupu1906/docker-selenium.git
    
[options]
packages = find:
python_requires = >= 3.6
zip_safe = false

[options.packages.find]
where = src

[flake8]
exclude =
    .tox,
    __pycache__,
    .env,
    .git,
    build,
    .eggs,
    *.egg
max_line_length = 79
extend-ignore = E203
